Sun Apr 26 23:01:07 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* format.c, format.h, gnubg.c, html.c, progress.c, progress.h,
	rollout.c, rollout.h:  Fix the rollout timer to allow for stopped
	rollouts and differing number of games done. Print the rollout context
	in the text progress.

Sun Apr 26 01:02:06 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* rollout.c: mt rollouts stopped one short of the minum number of
	trials when using jsd or sd criteria.

Sat Apr 25 22:01:35 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* AUTHORS, credits.sh, non-src/credits.c: Add Ingo Macherius to list
	of code contributors.
	
Fri Apr 24 21:55:27 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, renderprefs.c, renderprefs.h: Clean the CommandSaveSettings
	function up, and fix a (gtk) bug where saving the settings would pop
	an error message about resource unavailable. 

Wed Apr 22 18:28:09 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* progress.c: show the number of trials finished for each of
	candidates

Tue Apr 21 01:08:20 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* import.c: match wasn't cleared before import of mat files

Mon Apr 20 17:46:37 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c, play.c: fix a minor problem in quick_roll and dont' call
	CommandPlay when clicking during computer turn (may crash)

Mon Apr 20 17:42:19 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkrace.c, osr.c: only perform automatic osr when the position is a
	race and fix a problem in osr with chequers in the 3rd or 4th quadrant

Sat Apr 18 23:45:02 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkchequer.c, play.c: fix two problems with the update of skill
	labels reported by Michel.

Sat Apr 18 22:29:37 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: set shrink FALSE in the panel pane
	* rollout.c: fix typo in jsd check causing cube rollouts to stop early 

Wed Apr 15 19:51:11 CEST 2009 Christian Anthon <anthon@kiku.dk>
